Add feat face saving in settings

--- a/ProjectPlaneCurves/Properties/Settings.settings
+++ b/ProjectPlaneCurves/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="PlaneCurvesElemIds" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FaceRepresentation" Type="System.String" Scope="User">
+      <Value Profile="(Default)">""</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
