--- a/ProjectPlaneCurves/app.config
+++ b/ProjectPlaneCurves/app.config
@@ -10,6 +10,9 @@
             <setting name="PlaneCurvesElemIds" serializeAs="String">
                 <value />
             </setting>
+            <setting name="FaceRepresentation" serializeAs="String">
+                <value>""</value>
+            </setting>
         </ProjectPlaneCurves.Properties.Settings>
     </userSettings>
 </configuration>
