Add feat step vertix setup

--- a/ProjectPlaneCurves/app.config
+++ b/ProjectPlaneCurves/app.config
@@ -13,6 +13,9 @@
             <setting name="FaceRepresentation" serializeAs="String">
                 <value>""</value>
             </setting>
+            <setting name="PointStep" serializeAs="String">
+                <value>1.5</value>
+            </setting>
         </ProjectPlaneCurves.Properties.Settings>
     </userSettings>
 </configuration>
