--- a/ProjectPlaneCurves/Properties/Settings.settings
+++ b/ProjectPlaneCurves/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="FaceRepresentation" Type="System.String" Scope="User">
       <Value Profile="(Default)">""</Value>
     </Setting>
+    <Setting Name="PointStep" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1.5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
